[gd_scene load_steps=33 format=3 uid="uid://3eeoattdm7pk"]

[ext_resource type="Script" path="res://objects/creature.gd" id="1_17ate"]
[ext_resource type="Texture2D" uid="uid://xqmief0fxbnc" path="res://sprites/creature-small.png" id="1_uoo81"]
[ext_resource type="Texture2D" uid="uid://cgwpiw2dm4wra" path="res://sprites/creature-big.png" id="2_blnmw"]
[ext_resource type="PackedScene" uid="uid://koi35i1jdc20" path="res://objects/skull.tscn" id="2_hdvnx"]
[ext_resource type="PackedScene" uid="uid://csqsyqu024ooo" path="res://objects/shadow.tscn" id="4_gsyow"]
[ext_resource type="Texture2D" uid="uid://cpxalxqkgxyky" path="res://sprites/face.png" id="4_oxd6a"]
[ext_resource type="Script" path="res://objects/hunger.gd" id="5_h2seq"]
[ext_resource type="AudioStream" uid="uid://bv4f0ks1cxkrj" path="res://sounds/birth.wav" id="6_aw1x3"]
[ext_resource type="AudioStream" uid="uid://vhtcrne0gnni" path="res://sounds/eat.wav" id="7_0fnwu"]
[ext_resource type="AudioStream" uid="uid://rving2w622lq" path="res://sounds/heal.wav" id="7_lfydl"]
[ext_resource type="AudioStream" uid="uid://dpgfg1gtv57ih" path="res://sounds/step.wav" id="7_st1l7"]
[ext_resource type="AudioStream" uid="uid://boshnkxeere3a" path="res://sounds/quik.wav" id="10_opyr8"]
[ext_resource type="AudioStream" uid="uid://die3c4xxq6yuh" path="res://sounds/death.wav" id="10_yfxad"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7qb5i"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("7_0fnwu")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yvbxd"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("7_lfydl")

[sub_resource type="Animation" id="Animation_nudsn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_p87ef"]
resource_name = "eating-evil"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("eat")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_5kxxg"]
resource_name = "evil"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_n2br8"]
resource_name = "happy"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_51i6m"]
resource_name = "healing"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("heal")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_m1tgo"]
resource_name = "sad"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_64w17"]
resource_name = "struggling"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_groeh"]
_data = {
"RESET": SubResource("Animation_nudsn"),
"eating-evil": SubResource("Animation_p87ef"),
"evil": SubResource("Animation_5kxxg"),
"happy": SubResource("Animation_n2br8"),
"healing": SubResource("Animation_51i6m"),
"sad": SubResource("Animation_m1tgo"),
"struggling": SubResource("Animation_64w17")
}

[sub_resource type="Animation" id="Animation_r1knh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face-offset/face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_1djs2"]
resource_name = "being-eaten"
length = 1.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face-offset/face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.8, 0.85, 0.9, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, -16), Vector2(-1, -16), Vector2(1, -16), Vector2(-1, -16), Vector2(0, -16), Vector2(1, -16), Vector2(-1, -16), Vector2(1, -16), Vector2(-1, -16), Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_ahkxg"]
resource_name = "idle"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face-offset/face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2)]
}

[sub_resource type="Animation" id="Animation_myl58"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("face-offset/face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0), Vector2(0, 2)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../step")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2rmd"]
_data = {
"RESET": SubResource("Animation_r1knh"),
"being-eaten": SubResource("Animation_1djs2"),
"idle": SubResource("Animation_ahkxg"),
"walk": SubResource("Animation_myl58")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d5vbv"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("7_st1l7")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_og3gy"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("6_aw1x3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qg8hf"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("10_yfxad")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cbnjm"]
random_pitch = 1.1
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("10_opyr8")

[node name="creature" type="Node2D" groups=["creature"]]
script = ExtResource("1_17ate")
skull = ExtResource("2_hdvnx")

[node name="small" type="Sprite2D" parent="."]
visibility_layer = 2
position = Vector2(0, -13)
texture = ExtResource("1_uoo81")

[node name="shadow" parent="." instance=ExtResource("4_gsyow")]
scale = Vector2(0.5, 0.5)

[node name="big" type="Sprite2D" parent="."]
visibility_layer = 4
position = Vector2(0, -16)
texture = ExtResource("2_blnmw")
hframes = 5

[node name="face-offset" type="Node2D" parent="big"]
position = Vector2(10, -11)

[node name="face" type="Node2D" parent="big/face-offset"]

[node name="sprite" type="Sprite2D" parent="big/face-offset/face"]
texture = ExtResource("4_oxd6a")
hframes = 9

[node name="eat" type="AudioStreamPlayer2D" parent="big/face-offset/face/sprite"]
position = Vector2(-9.53674e-07, 7.14286)
scale = Vector2(1.42857, 1.42857)
stream = SubResource("AudioStreamRandomizer_7qb5i")
volume_db = -2.0
max_distance = 50.0

[node name="heal" type="AudioStreamPlayer2D" parent="big/face-offset/face/sprite"]
position = Vector2(-9.53674e-07, 7.14286)
scale = Vector2(1.42857, 1.42857)
stream = SubResource("AudioStreamRandomizer_yvbxd")
volume_db = -2.0
max_distance = 50.0

[node name="animation" type="AnimationPlayer" parent="big/face-offset/face/sprite"]
libraries = {
"": SubResource("AnimationLibrary_groeh")
}
autoplay = "happy"

[node name="animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../big")
libraries = {
"": SubResource("AnimationLibrary_s2rmd")
}
autoplay = "idle"

[node name="idle-timer" type="Timer" parent="."]
one_shot = true

[node name="birthing-timer" type="Timer" parent="."]
one_shot = true

[node name="eating-timer" type="Timer" parent="."]
one_shot = true

[node name="healing-timer" type="Timer" parent="."]
one_shot = true

[node name="hurt-timer" type="Timer" parent="."]
one_shot = true

[node name="hunger" type="Node" parent="."]
script = ExtResource("5_h2seq")

[node name="step" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_d5vbv")
volume_db = -6.0
max_distance = 50.0

[node name="birth" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_og3gy")
volume_db = -4.0
max_distance = 50.0

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_qg8hf")
volume_db = -2.0
max_distance = 50.0

[node name="quik" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_cbnjm")
volume_db = -8.0
max_distance = 50.0

[connection signal="timeout" from="idle-timer" to="." method="idleTimeout"]
[connection signal="timeout" from="birthing-timer" to="." method="birthingTimeout"]
[connection signal="timeout" from="eating-timer" to="." method="eatingTimeout"]
[connection signal="timeout" from="healing-timer" to="." method="healingTimeout"]
[connection signal="timeout" from="hurt-timer" to="." method="hurtTimeout"]
[connection signal="reached_zero" from="hunger" to="." method="die"]
[connection signal="finished" from="death" to="death" method="queue_free"]
